--- a/index.html
+++ b/index.html
@@ -99,11 +99,17 @@
     }
 
     .section-label {
-      font-size: 1.45rem;
-      text-transform: uppercase;
-      letter-spacing: 0.18em;
-      color: var(--text-soft);
-    }
+  margin-top: 18px;
+  padding-bottom: 6px;
+
+  font-size: 1.25rem;
+  letter-spacing: 0.22em;
+  text-transform: uppercase;
+
+  color: var(--accent-yellow-soft);
+  border-bottom: 1px solid rgba(244, 196, 48, 0.35);
+}
+
 
     .small-timestamp {
       font-size: 1.2rem;
@@ -127,14 +133,13 @@
       min-width: 0;
     }
 
-    .beer-row {
-      display: flex;
-      flex-direction: column;
-      padding: 12px 16px;
-      border-radius: 6px;
-      background: rgba(24, 25, 32, 0.9);
-      border: 1px solid rgba(39, 41, 53, 0.9);
-    }
+   beer-row {
+  padding: 10px 14px;
+  border-radius: 6px;
+
+  background: rgba(24, 25, 32, 0.65);
+  border: 1px solid rgba(39, 41, 53, 0.45);
+}
 
     .beer-top {
       display: flex;
@@ -147,22 +152,23 @@
     .beer-name {
       flex: 1;
       min-width: 0;
-      font-size: 1.5rem;
-      font-weight: 600;
-      letter-spacing: 0.03em;
-      text-transform: uppercase;
-      color: var(--text-main);
+      font-size: 1.55rem;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: var(--text-main);
+}
 
-      white-space: normal;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    .beer-brewery {
+  margin-top: 2px;
+  font-size: 0.95rem;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 2;
-      line-height: 1.15;
-    }
-
+  color: var(--text-muted);
+  opacity: 0.85;
+}
+    
     .beer-meta-inline {
       font-size: 1.25rem;
       color: var(--text-soft);
@@ -181,11 +187,16 @@
     }
 
     .beer-style {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      min-width: 0;
-    }
+  font-size: 1.05rem;
+  font-style: italic;
+  color: var(--text-soft);
+  opacity: 0.9;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 
     .beer-price {
       font-weight: 600;
@@ -569,9 +580,35 @@
         return ta - tb;
       });
 
-      const mid = Math.ceil(beers.length / 2);
-      const leftBeers = beers.slice(0, mid);
-      const rightBeers = beers.slice(mid);
+// --- NEW: group beers by category so categories stay together in columns ---
+function groupByCategory(beers) {
+  const groups = {};
+  beers.forEach((beer) => {
+    const cat = ((beer.category || beer.Category || "Other").toString().trim()) || "Other";
+    if (!groups[cat]) groups[cat] = [];
+    groups[cat].push(beer);
+  });
+  return groups;
+}
+      
+     const grouped = groupByCategory(beers);
+
+const leftBeers = [];
+const rightBeers = [];
+
+let leftCount = 0;
+const MAX_PER_COLUMN = Math.ceil(beers.length / 2);
+
+// Keep categories together when possible
+Object.entries(grouped).forEach(([category, list]) => {
+  if (leftCount + list.length <= MAX_PER_COLUMN) {
+    leftBeers.push(...list);
+    leftCount += list.length;
+  } else {
+    rightBeers.push(...list);
+  }
+});
+
 
       function renderColumn(list, container) {
         let lastCategory = null;
@@ -596,6 +633,11 @@
           const name = document.createElement("div");
           name.className = "beer-name";
           name.textContent = beer.name || "";
+
+          // --- NEW: brewery line under the beer name ---
+const brewery = document.createElement("div");
+brewery.className = "beer-brewery";
+brewery.textContent = beer.brewery || beer.Brewery || "";
 
           const rightMeta = document.createElement("div");
           rightMeta.style.display = "flex";
@@ -622,8 +664,17 @@
             rightMeta.appendChild(feat);
           }
 
-          top.appendChild(name);
-          top.appendChild(rightMeta);
+// --- NEW: name stack (beer name + brewery) ---
+const nameWrap = document.createElement("div");
+nameWrap.style.display = "flex";
+nameWrap.style.flexDirection = "column";
+nameWrap.style.minWidth = "0";
+
+nameWrap.appendChild(name);
+if (brewery.textContent.trim()) nameWrap.appendChild(brewery);
+
+top.appendChild(nameWrap);
+top.appendChild(rightMeta);
 
           const metaInline = document.createElement("div");
           metaInline.className = "beer-meta-inline";
